force-app/main/default/objects/Phase_1_UAT__c/Phase_1_UAT__c.object-meta.xml
<CustomObject>
    <description>A custom object to track the survey results of UAT from Phase 1</description>
    <label>Phase 1 UAT</label>
    <nameField>
        <displayFormat>{00}</displayFormat>
        <label>Survey  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Phase 1 UAT</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>