force-app/main/default/objects/Phase_1_UAT__c/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <inlineHelpText>Do you view Customer Relationship Management as beneficial to:</inlineHelpText>
    <label>Question #1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>You</fullName>
            </value>
            <value>
                <fullName>Your Management</fullName>
            </value>
            <value>
                <fullName>Your Customers</fullName>
            </value>
            <value>
                <fullName>Your Partners</fullName>
            </value>
            <value>
                <fullName>Others in your company</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>