force-app/main/default/objects/Phase_1_UAT__c/fields/Question_2__c.field-meta.xml
<CustomField>
    <fullName>Question_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>How have you benefited from being part of the User Acceptance Test? Please describe your experience in 1-2 sentances.</inlineHelpText>
    <label>Question #2</label>
    <type>TextArea</type>
</CustomField>