force-app/main/default/objects/Phase_1_UAT__c/fields/Question_3__c.field-meta.xml
<CustomField>
    <fullName>Question_3__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please list any specific capabilities you&apos;d like to see added to Salesforce.com.</inlineHelpText>
    <label>Question #3</label>
    <type>TextArea</type>
</CustomField>