force-app/main/default/objects/Phase_1_UAT__c/fields/Question_6a__c.field-meta.xml
<CustomField>
    <fullName>Question_6a__c</fullName>
    <inlineHelpText>Taking all things into consideration, how satisfied are you overall with the new Zimmer CRM application? Please use a scale from 1 to 10 where 1 is Very Dissatisfied and 10 is Very Satisfied.</inlineHelpText>
    <label>Question #6a</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>