force-app/main/default/objects/Phase_1_UAT__c/fields/Question_6b__c.field-meta.xml
<CustomField>
    <fullName>Question_6b__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please describe why you came to your rating in 6a.</inlineHelpText>
    <label>Question #6b</label>
    <type>TextArea</type>
</CustomField>