force-app/main/default/objects/Phase_1_UAT__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question_1__c</columns>
    <columns>Question_2__c</columns>
    <columns>Question_3__c</columns>
    <columns>Question_4__c</columns>
    <columns>Question_5__c</columns>
    <columns>Question_6a__c</columns>
    <columns>Question_6b__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>